--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -12,6 +12,7 @@
   box-shadow: 0 size(1) size(2) calc(-1 * size(1)) var(--btn-color);
   // font-weight: 600;
   text-transform: capitalize;
+  white-space: nowrap;
   cursor: pointer;
   &:is(:hover, :focus) {
     color: var(--btn-hover);
