--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -9,9 +9,9 @@ html:is(:has(.opened), .deactivate-scroll) {
 
   @include flex-flow();
 
-  // position: relative;
-  top: 0;
-  left: 0;
+  // position: sticky;
+  // top: 0;
+  // left: 0;
 
   &__logo {
     display: inline-block;
@@ -26,7 +26,19 @@ html:is(:has(.opened), .deactivate-scroll) {
 
 .navbar {
   @include flex-flow();
+  isolation: isolate;
 
+  @include media(tablet, max) {
+    &:is(:has(.opened), .deactivate-scroll *)::before {
+      content: "";
+      position: absolute;
+      background-image: linear-gradient(to bottom, neutral(3), transparent);
+      opacity: 0.6;
+      inset: -100%;
+      z-index: -1;
+      transition: all 350ms;
+    }
+  }
   &__menu-toggle {
     height: size(7);
     background-color: transparent;
@@ -43,9 +55,9 @@ html:is(:has(.opened), .deactivate-scroll) {
       width: size(6);
       height: size(1);
       border-radius: 50vh;
-      background-color: var(--toggle-color, springgreen);
-      box-shadow: 0 size(2) 0 var(--toggle-color, hotpink),
-        0 calc(-1 * size(2)) 0 var(--toggle-color, royalblue);
+      background-color: var(--toggle-color);
+      box-shadow: 0 size(2) 0 var(--toggle-color),
+        0 calc(-1 * size(2)) 0 var(--toggle-color);
       transition: all 350ms;
       isolation: isolate;
       &::before,
@@ -64,11 +76,11 @@ html:is(:has(.opened), .deactivate-scroll) {
         box-shadow: none;
       }
       span::before {
-        background-color: primary(2);
+        background-color: accent(2);
         transform: rotate(-45deg);
       }
       span::after {
-        background-color: primary(2);
+        background-color: accent(2);
         transform: rotate(45deg);
       }
     }
@@ -85,7 +97,8 @@ html:is(:has(.opened), .deactivate-scroll) {
         inset: 30% 20%;
         background-color: neutral(1);
         border-radius: size(2);
-        box-shadow: 0 0 0 100vh hsl(0 0% 0% / 0.25);
+        // isolation: isolate;
+
         @include animate(fade-in, 600ms ease-in-out) {
           from {
             transform: translateY(calc(-1 * size(2)));
