--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,17 @@
 :root {
+  /* color: primary */
   --clr-primary-1: hsl(232deg, 67%, 75%);
   --clr-primary-2: hsl(232deg, 67%, 55%);
   --clr-primary-3: hsl(232deg, 67%, 5%);
+  /* color: neutral */
   --clr-neutral-1: hsl(245deg, 100%, 95%);
   --clr-neutral-2: hsl(245deg, 51%, 46%);
   --clr-neutral-3: hsl(245deg, 100%, 11%);
+  /* color: accent */
   --clr-accent-1: hsl(46deg, 100%, 70%);
   --clr-accent-2: hsl(46deg, 100%, 60%);
   --clr-accent-3: hsl(46deg, 100%, 50%);
+  /* Size system */
   --size-1: 0.25rem;
   --size-2: 0.5rem;
   --size-3: 0.75rem;
@@ -17,50 +21,61 @@
   --size-7: 2.5rem;
   --size-8: 3rem;
 }
+
 html {
   height: 100%;
   font-size: 100%;
   box-sizing: border-box;
 }
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: inherit;
 }
+
 ::-moz-selection {
   background-color: var(--clr-primary-1);
   color: var(--clr-neutral-1);
 }
+
 ::selection {
   background-color: var(--clr-primary-1);
   color: var(--clr-neutral-1);
 }
+
 body {
   background-color: var(--clr-neutral-1);
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   color: var(--clr-primary-3);
 }
+
 main {
   max-width: 75em;
   width: calc(100% - var(--size-5));
   margin-inline: auto;
   -webkit-padding-before: var(--size-4);
-  padding-block-start: var(--size-4);
+          padding-block-start: var(--size-4);
 }
+
 input,
 button {
   font: inherit;
 }
+
 ul {
   list-style: none;
 }
+
 a {
   text-decoration: none;
   color: inherit;
 }
+
 html:is(:has(.opened), .deactivate-scroll) {
   overflow: hidden;
 }
+
 .navigation {
   display: flex;
   align-items: center;
@@ -75,6 +90,7 @@ html:is(:has(.opened), .deactivate-scroll) {
   height: var(--size-8);
   inset: 0;
 }
+
 .navbar {
   display: flex;
   align-items: center;
@@ -85,11 +101,7 @@ html:is(:has(.opened), .deactivate-scroll) {
   .navbar:is(:has(.opened), .deactivate-scroll *)::before {
     content: "";
     position: absolute;
-    background-image: linear-gradient(
-      to bottom,
-      var(--clr-neutral-3),
-      transparent
-    );
+    background-image: linear-gradient(to bottom, var(--clr-neutral-3), transparent);
     opacity: 0.6;
     inset: -100%;
     z-index: -1;
@@ -98,7 +110,7 @@ html:is(:has(.opened), .deactivate-scroll) {
 }
 .navbar__menu-toggle {
   height: var(--size-7);
-  background-color: rgba(0, 0, 0, 0);
+  background-color: transparent;
   border: none;
   border-radius: 0;
   display: grid;
@@ -114,22 +126,20 @@ html:is(:has(.opened), .deactivate-scroll) {
   height: var(--size-1);
   border-radius: 50vh;
   background-color: var(--toggle-color);
-  box-shadow: 0 var(--size-2) 0 var(--toggle-color),
-    0 calc(-1 * var(--size-2)) 0 var(--toggle-color);
+  box-shadow: 0 var(--size-2) 0 var(--toggle-color), 0 calc(-1 * var(--size-2)) 0 var(--toggle-color);
   transition: all 350ms;
   isolation: isolate;
 }
-.navbar__menu-toggle span::before,
-.navbar__menu-toggle span::after {
+.navbar__menu-toggle span::before, .navbar__menu-toggle span::after {
   content: "";
   position: absolute;
   inset: 0;
-  background-color: rgba(0, 0, 0, 0);
+  background-color: transparent;
   border-radius: inherit;
   transition: all 350ms;
 }
 .navbar__menu-toggle:where(.opened) span {
-  background-color: rgba(0, 0, 0, 0);
+  background-color: transparent;
   box-shadow: none;
 }
 .navbar__menu-toggle:where(.opened) span::before {
@@ -153,7 +163,7 @@ html:is(:has(.opened), .deactivate-scroll) {
     background-color: var(--clr-neutral-1);
     border-radius: var(--size-2);
     -webkit-animation: fade-in 600ms ease-in-out;
-    animation: fade-in 600ms ease-in-out;
+            animation: fade-in 600ms ease-in-out;
   }
   @-webkit-keyframes fade-in {
     from {
@@ -178,12 +188,7 @@ html:is(:has(.opened), .deactivate-scroll) {
 }
 .navbar__links li {
   width: 60%;
-  background-image: linear-gradient(
-      to bottom right,
-      var(--clr-primary-2),
-      var(--clr-primary-2)
-    ),
-    linear-gradient(to bottom right, var(--clr-primary-2), var(--clr-primary-2));
+  background-image: linear-gradient(to bottom right, var(--clr-primary-2), var(--clr-primary-2)), linear-gradient(to bottom right, var(--clr-primary-2), var(--clr-primary-2));
   background-repeat: no-repeat;
   background-position: bottom left, top right;
   background-size: 0% calc(var(--size-1) * 0.5);
@@ -217,11 +222,13 @@ html:is(:has(.opened), .deactivate-scroll) {
     transform: none;
   }
 }
+
 @media (max-width: 48em) {
   .cta {
     display: none;
   }
 }
+
 .hero {
   display: flex;
   justify-content: space-between;
@@ -235,32 +242,29 @@ html:is(:has(.opened), .deactivate-scroll) {
 .hero > * {
   flex: 1;
 }
+
 .image-container {
   display: grid;
   place-items: center;
 }
+
 img {
   max-width: 60%;
 }
+
 .content-container {
   padding: var(--size-3);
 }
 .content-container > * + * {
   -webkit-margin-before: var(--spacer, var(--size-4));
-  margin-block-start: var(--spacer, var(--size-4));
+          margin-block-start: var(--spacer, var(--size-4));
 }
 .content-container h1 {
   font-size: var(--size-8);
-  background-image: linear-gradient(
-    to bottom right,
-    var(--clr-primary-2),
-    var(--clr-neutral-2),
-    var(--clr-neutral-3),
-    var(--clr-primary-3)
-  );
+  background-image: linear-gradient(to bottom right, var(--clr-primary-2), var(--clr-neutral-2), var(--clr-neutral-3), var(--clr-primary-3));
   -webkit-background-clip: text;
-  background-clip: text;
-  color: rgba(0, 0, 0, 0);
+          background-clip: text;
+  color: transparent;
 }
 @media (max-width: 48em) {
   .content-container h1 {
@@ -269,11 +273,12 @@ img {
 }
 .content-container p {
   -webkit-padding-start: var(--size-3);
-  padding-inline-start: var(--size-3);
+          padding-inline-start: var(--size-3);
   font-size: calc(var(--size-4) + var(--size-1));
   color: var(--clr-neutral-3);
   opacity: 0.8;
 }
+
 .btn {
   --btn-color: var(--clr-primary-2);
   --btn-hover: var(--clr-accent-2);
@@ -283,8 +288,7 @@ img {
   padding: var(--size-3) var(--size-5);
   border: calc(0.5 * var(--size-1)) solid var(--btn-color);
   border-radius: 50vh;
-  box-shadow: 0 var(--size-1) var(--size-2) calc(-1 * var(--size-1))
-    var(--btn-color);
+  box-shadow: 0 var(--size-1) var(--size-2) calc(-1 * var(--size-1)) var(--btn-color);
   text-transform: capitalize;
   white-space: nowrap;
   cursor: pointer;
@@ -297,15 +301,16 @@ img {
   --btn-hover: var(--clr-primary-2);
 }
 .btn--neutral {
-  background-color: rgba(0, 0, 0, 0);
+  background-color: transparent;
   border-color: var(--clr-primary-3);
   color: var(--clr-primary-3);
 }
 .btn--neutral:is(:hover, :focus) {
   color: var(--clr-accent-2);
 }
+
 .email-input {
-  background-color: #00ff7f;
+  background-color: springgreen;
   border: calc(0.5 * var(--size-1)) solid var(--clr-primary-3);
   border-radius: 50vh;
   background-color: var(--clr-neutral-1);
@@ -319,7 +324,7 @@ img {
   border: none;
   padding: var(--size-3);
   -webkit-padding-start: var(--size-8);
-  padding-inline-start: var(--size-8);
+          padding-inline-start: var(--size-8);
   background-color: inherit;
   caret-color: var(--clr-primary-2);
   outline: none;
@@ -344,4 +349,4 @@ img {
 }
 .email-input button {
   flex: 1;
-} /*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
